@@ -1,3 +1,8 @@
+2009-01-08  Michal Ludvig  <michal@logix.cz>
+
+	* S3/S3.py: Some errors during file upload were incorrectly 
+	  interpreted as MD5 mismatch. (bug #2384990)
+
 2009-01-07  Michal Ludvig  <michal@logix.cz>
 
 	* s3cmd: New command 'setacl'.
